--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1,3 +1,34 @@
+ul {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(18, 28, 41);
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+li {
+    display: inline;
+}
+
+ul a {
+    float: left;
+    padding: 10px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+.active {
+    background-color: #5ca595;
+}
+
 body {
     background-color: rgb(20, 48, 85);
     color:rgb(156, 185, 223);
