--- a/css/news.css
+++ b/css/news.css
@@ -17,3 +17,35 @@ a:hover {
 a:active {
     color: blue;
 }
+
+ul {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+li {
+    display: inline;
+}
+
+ul a {
+    float: left;
+    padding: 10px;
+    text-decoration: none;
+    color: rgb(104, 136, 179);
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+.active {
+    background-color: rgb(61, 80, 99); 
+}
